dataset1235/2025-2/2868285114/users/221116065/executions/3792430146_254684124.log
== RUN (2025-09-02 22:11:08)
-- CODE: 
idade = int(input("Qual e a idade da pessoa?: "))

if idade >= 18:
  print("Maior_de_idade")

else:
  print(Menor_de_idade)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(Menor_de_idade)
          ^^^^^^^^^^^^^^
NameError: name 'Menor_de_idade' is not defined
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(Menor_de_idade)
          ^^^^^^^^^^^^^^
NameError: name 'Menor_de_idade' is not defined
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:12:36)
-- CODE: 
idade = int(input("Qual e a idade da pessoa?: "))

if idade >= 18:
  print("Maior_de_idade")

else:
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Qual e a idade da pessoa?: Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Qual e a idade da pessoa?: Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:13:06)
-- CODE: 
idade = int(input("Qual e a idade da pessoa?: "))

if idade >= 18:
  print("Maior_de_idade")

else:
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Qual e a idade da pessoa?: Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Qual e a idade da pessoa?: Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:12:52)
-- CODE: 
idade = int(input("Qual e a idade da pessoa?: "))

if idade >= 18:
  print("Maior_de_idade")

else:
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Qual e a idade da pessoa?: Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Qual e a idade da pessoa?: Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:12:13)
-- CODE: 
idade = int(input("Qual e a idade da pessoa?: "))

if idade >= 18:
  print("Maior_de_idade")

else:
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Qual e a idade da pessoa?: Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Qual e a idade da pessoa?: Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:14:04)
-- CODE: 
idade = int(input("Qual e a idade da pessoa?: "))

if idade >= 18:
  print(idade)
  print("Maior_de_idade")

else:
  print(idade)
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:11:29)
-- CODE: 
idade = int(input("Qual e a idade da pessoa?: "))

if idade >= 18:
  print("Maior_de_idade")

else:
  print(Menor_de_idade)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(Menor_de_idade)
          ^^^^^^^^^^^^^^
NameError: name 'Menor_de_idade' is not defined
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(Menor_de_idade)
          ^^^^^^^^^^^^^^
NameError: name 'Menor_de_idade' is not defined
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:11:48)
-- CODE: 
idade = int(input("Qual e a idade da pessoa?: "))

if idade >= 18:
  print("Maior_de_idade")

else:
  print("Menor_de_idade")"
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 7
    print("Menor_de_idade")"
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 7
    print("Menor_de_idade")"
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 7
    print("Menor_de_idade")"
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 7
    print("Menor_de_idade")"
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 7
    print("Menor_de_idade")"
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 7
    print("Menor_de_idade")"
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:13:57)
-- CODE: 
idade = int(input("Qual e a idade da pessoa?: "))

if idade >= 18:
  print(idade)
  print("Maior_de_idade")

else:
  print(idade)
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:11:49)
-- CODE: 
idade = int(input("Qual e a idade da pessoa?: "))

if idade >= 18:
  print("Maior_de_idade")

else:
  print("Menor_de_idade")"
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 7
    print("Menor_de_idade")"
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 7
    print("Menor_de_idade")"
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 7
    print("Menor_de_idade")"
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 7
    print("Menor_de_idade")"
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 7
    print("Menor_de_idade")"
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 7
    print("Menor_de_idade")"
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:12:26)
-- CODE: 
idade = int(input("Qual e a idade da pessoa?: "))

if idade >= 18:
  print("Maior_de_idade")

else:
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Qual e a idade da pessoa?: Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Qual e a idade da pessoa?: Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:12:11)
-- CODE: 
idade = int(input("Qual e a idade da pessoa?: "))

if idade >= 18:
  print("Maior_de_idade")

else:
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Qual e a idade da pessoa?: Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Qual e a idade da pessoa?: Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:11:50)
-- CODE: 
idade = int(input("Qual e a idade da pessoa?: "))

if idade >= 18:
  print("Maior_de_idade")

else:
  print("Menor_de_idade")"
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 7
    print("Menor_de_idade")"
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 7
    print("Menor_de_idade")"
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 7
    print("Menor_de_idade")"
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 7
    print("Menor_de_idade")"
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 7
    print("Menor_de_idade")"
                           ^
SyntaxError: unterminated string literal (detected at line 7)
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 7
    print("Menor_de_idade")"
                           ^
SyntaxError: unterminated string literal (detected at line 7)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:11:12)
-- CODE: 
idade = int(input("Qual e a idade da pessoa?: "))

if idade >= 18:
  print("Maior_de_idade")

else:
  print(Menor_de_idade)
-- EXECUTION TIME: 
0.00666667
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(Menor_de_idade)
          ^^^^^^^^^^^^^^
NameError: name 'Menor_de_idade' is not defined
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(Menor_de_idade)
          ^^^^^^^^^^^^^^
NameError: name 'Menor_de_idade' is not defined
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:12:06)
-- CODE: 
idade = int(input("Qual e a idade da pessoa?: "))

if idade >= 18:
  print("Maior_de_idade")

else:
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Qual e a idade da pessoa?: Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Qual e a idade da pessoa?: Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Qual e a idade da pessoa?: Maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
